--- a/Basic-Calculator/Basic-Calculator/App.xaml
+++ b/Basic-Calculator/Basic-Calculator/App.xaml
@@ -3,6 +3,22 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Basic_Calculator.App">
     <Application.Resources>
-
+        <Style TargetType="Button" x:Key="btnNumeros">
+            <Setter Property="CornerRadius" Value="35"/>
+            <Setter Property="BackgroundColor" Value="#3F696A"/>
+            <Setter Property="WidthRequest" Value="90"/>
+            <Setter Property="HeightRequest" Value="70"/>
+            <Setter Property="TextColor" Value="White"/>
+            <Setter Property="FontSize" Value="40"/>
+            <Setter Property="TextColor" Value="White"/>
+        </Style>
+        <Style TargetType="Button" x:Key="btnOperaciones">
+            <Setter Property="CornerRadius" Value="35"/>
+            <Setter Property="BackgroundColor" Value="#C9DEDF"/>
+            <Setter Property="WidthRequest" Value="90"/>
+            <Setter Property="HeightRequest" Value="70"/>
+            <Setter Property="TextColor" Value="CadetBlue"/>
+            <Setter Property="FontSize" Value="40"/>
+        </Style>
     </Application.Resources>
 </Application>
