Realizado de operaciones. Pendiente la resta.

--- a/Basic-Calculator/Basic-Calculator/Views/MainPage.xaml
+++ b/Basic-Calculator/Basic-Calculator/Views/MainPage.xaml
@@ -22,71 +22,85 @@
 
             <Label Grid.ColumnSpan="4"
                          BackgroundColor="CadetBlue"
-                         Text="Welcome to Xamarin.Forms!" 
                          HorizontalTextAlignment="End"
                          VerticalTextAlignment="Center"
                          TextColor="White" 
                          FontSize="36"
-                        LineBreakMode="NoWrap"
-                        FontAttributes="Bold"/>
+                         LineBreakMode="NoWrap"
+                         FontAttributes="Bold"
+                         x:Name="txtResultado"/>
                         
             <Button Grid.Row="1" 
                         Grid.Column="0"
                         Style="{StaticResource btnNumeros}"
-                        Text="7"/>
+                        Text="7"
+                        Clicked="NumeroClicked"/>
             <Button Grid.Row="1" 
                         Grid.Column="1"
                         Style="{StaticResource btnNumeros}"
-                        Text="8"/>
+                        Text="8"
+                        Clicked="NumeroClicked"/>
             <Button Grid.Row="1" 
                         Grid.Column="2"
                         Style="{StaticResource btnNumeros}"
-                        Text="9"/>
+                        Text="9"
+                        Clicked="NumeroClicked"/>
             <Button Grid.Row="1" 
                         Grid.Column="3"
                         Style="{StaticResource btnOperaciones}"
-                        Text="C"/>
+                        Text="C"
+                        Clicked="Clear"/>
             <Button Grid.Row="2" 
                         Grid.Column="0"
                         Style="{StaticResource btnNumeros}"
-                        Text="4"/>
+                        Text="4"
+                        Clicked="NumeroClicked"/>
             <Button Grid.Row="2" 
                         Grid.Column="1"
                         Style="{StaticResource btnNumeros}"
-                        Text="5"/>
+                        Text="5"
+                        Clicked="NumeroClicked"/>
             <Button Grid.Row="2" 
                         Grid.Column="2"
                         Style="{StaticResource btnNumeros}"
-                        Text="6"/>
+                        Text="6"
+                        Clicked="NumeroClicked"/>
             <Button Grid.Row="2" 
                         Grid.Column="3"
                         Style="{StaticResource btnOperaciones}"
-                        Text="+"/>
+                        Text="+"
+                        Clicked="SelectOperation"/>
             <Button Grid.Row="3" 
                         Grid.Column="0"
                         Style="{StaticResource btnNumeros}"
-                        Text="1"/>
+                        Text="1"
+                        Clicked="NumeroClicked"/>
             <Button Grid.Row="3" 
                         Grid.Column="1"
                         Style="{StaticResource btnNumeros}"
-                        Text="2"/>
+                        Text="2"
+                        Clicked="NumeroClicked"/>
             <Button Grid.Row="3" 
                         Grid.Column="2"
                         Style="{StaticResource btnNumeros}"
-                        Text="3"/>
+                        Text="3"
+                        Clicked="NumeroClicked"/>
             <Button Grid.Row="3" 
                         Grid.Column="3"
                         Style="{StaticResource btnOperaciones}"
-                        Text="-"/>
+                        Text="-"
+                        Clicked="SelectOperation"/>
             <Button Grid.Row="4" 
                         Grid.Column="0"
                         Style="{StaticResource btnNumeros}"
                         Text="0"
-                        Grid.ColumnSpan="3"/>
+                        Grid.ColumnSpan="3"
+                        Clicked="NumeroClicked"/>
             <Button Grid.Row="4" 
                         Grid.Column="3"
                         Style="{StaticResource btnOperaciones}"
-                        Text="*"/>
+                        Text="*"
+                        Clicked="SelectOperation"/>
             <Button Grid.Row="5" 
                         Grid.Column="0"
                         Style="{StaticResource btnOperaciones}"
@@ -95,11 +109,13 @@
                         Grid.Column="1"
                         Style="{StaticResource btnOperaciones}"
                         Text="="
-                        Grid.ColumnSpan="2"/>
+                        Grid.ColumnSpan="2"
+                        Clicked="ResultOperation"/>
             <Button Grid.Row="5" 
                         Grid.Column="3"
                         Style="{StaticResource btnOperaciones}"
-                        Text="/"/>
+                        Text="÷"
+                        Clicked="SelectOperation"/>
         </Grid>
     </ContentPage.Content>
    
