--- a/Basic-Calculator/Basic-Calculator/Views/MainPage.xaml
+++ b/Basic-Calculator/Basic-Calculator/Views/MainPage.xaml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Basic_Calculator.MainPage">
+             x:Class="Basic_Calculator.Views.MainPage">
     
     <ContentPage.Content>
         <Grid RowSpacing="5" ColumnSpacing="7" BackgroundColor="CadetBlue">
@@ -28,7 +28,8 @@
                          FontSize="36"
                          LineBreakMode="NoWrap"
                          FontAttributes="Bold"
-                         x:Name="txtResultado"/>
+                         x:Name="txtResultado"
+                        Margin="0,0,15,0"/>
                         
             <Button Grid.Row="1" 
                         Grid.Column="0"
@@ -104,7 +105,8 @@
             <Button Grid.Row="5" 
                         Grid.Column="0"
                         Style="{StaticResource btnOperaciones}"
-                        Text="."/>
+                        Text="."
+                        Clicked="SelectDecimal"/>
             <Button Grid.Row="5" 
                         Grid.Column="1"
                         Style="{StaticResource btnOperaciones}"
